# alphatheta

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  scanner_entry.py
backend/app/: config.py  dependencies.py  main.py
backend/app/adapters/: broker_base.py  paper.py  tradier.py  yahoo.py
backend/app/db/: auto_migrate.py  session.py
backend/app/logging/: logger_setup.py
backend/app/middleware/: auth.py  calendar.py  idempotency.py  kill_switch.py  rate_limit.py  trace_id.py  visitor_tracking.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  kill_switch.py  order.py  order_leg.py  portfolio_snapshot.py  position.py  tick.py  transaction.py  user.py  user_broker_credentials.py  watchlist.py
backend/app/risk/: dynamic_thresholds.py
backend/app/routers/: admin.py  advanced_ops.py  auth.py  dashboard.py  execution.py  market.py  market_data.py  orders.py  portfolio.py  risk.py  scanner.py  settings.py  strategy.py
backend/app/scheduler/: core.py
backend/app/schemas/: admin.py  market.py  order.py  risk.py  strategy.py
backend/app/services/: admin.py  auth.py  broker_health.py  corporate_actions.py  crypto_vault.py  dividend_defense.py  fundamental_data.py  margin.py  market_calendar.py  notification.py  notifier.py  order_chaser.py  order_manager.py  reconciliation.py  risk_engine.py  scanner_daemon.py  scanner_run.py  scenario_calculator.py  signal_publisher.py  smart_router.py  strategy_entry.py  strategy_timing.py  (+1 more)
backend/migrations/: 001_core_schema.sql
backend/replay/: runner.py
(+184 files in other folders)
